# nm-pangolin

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  renovate.json
.github/workflows/: ci.yml
conf/: nm-pangolin-service.service  nm-pangolin.conf  nm-pangolin.name
plasma-plugin/: CMakeLists.txt  pangolin.cpp  pangolin.h  pangolin.ui  pangolinauth.cpp  pangolinauth.h  pangolinauth.ui  pangolinwidget.cpp  pangolinwidget.h  plasmanetworkmanagement_pangolinui.json
plasma-plugin/libs/editor/: plasmanm_editor_export.h  vpnuiplugin.h
src/: __main__.py  config.py  nm_pangolin_service.py  pangolin_wrapper.py
tests/: test_config.py  test_service.py  test_wrapper.py
