[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nm-pangolin"
version = "0.1.0"
description = "NetworkManager VPN plugin for Pangolin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Adam", email = "djfreaq@gmail.com" },
]
dependencies = [
    "dbus-python>=1.3.2",
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
